Fixed top news overflow. Lots of admin files.

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -153,6 +153,8 @@ div#flash-notice {
 #top-news-content {
   float: left; /* Float left so that we can clear it */
   width: 100%;
+  overflow: hidden;
+  height: 108px;
 }
 
 .readmore {
